# openai-toolchain

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  setup.py  sitemap.xml
.github/workflows/: bump-version.yml  docs.yml  gh-pages.yml  release.yml  test.yml
CHANGELOG/: index.html
CONTRIBUTING/: index.html
docs/docs/reference/: index.md
docs/docs/reference/openai_toolchain/: client.md  registry.md  tools.md  types.md
examples/: weather_bot.py
examples/advanced/: index.html
examples/async/: index.html
examples/basic/: index.html
installation/: index.html
openai_toolchain/: __init__.py  _version.py  client.py  registry.py  tools.py  types.py
reference/: index.html
reference/openai_toolchain/client/: index.html
reference/openai_toolchain/registry/: index.html
reference/openai_toolchain/tools/: index.html
reference/openai_toolchain/types/: index.html
search/: search_index.json
tests/: conftest.py  test_basic.py  test_non_api_params.py  test_tool_registry.py  test_weather_bot.py
tutorial/: index.html
